--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
         <h1>Git Tutorial</h1>
         <h3>Git Commands :</h3>
         git clone <i>url</i>
+        <hr>
+        git add <i>filename</i>
     </body>
 </html>
