--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta name = "viewport" content="width=decvice-width">
         <title>Learn Git Using Github in 5 minutes</title>
-
+        <style>h1{font-family: Kristen ITC;}</style>
     </head>
 
     <body>
